zuul/templates/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zuul-web
  labels:
    app: zuul-web
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: zuul-web
